--- a/index.html
+++ b/index.html
@@ -4,11 +4,63 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Akıllı Hava Durumu</title>
+
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4f46e5" />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: linear-gradient(180deg, #4facfe, #00f2fe);
+      color: white;
+      text-align: center;
+      min-height: 100vh;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-top: 30px;
+    }
+
+    input {
+      padding: 12px;
+      width: 70%;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+    }
+
+    button {
+      padding: 12px 16px;
+      margin-left: 6px;
+      border-radius: 8px;
+      border: none;
+      background: #ffffff;
+      color: #333;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .card {
+      margin-top: 30px;
+      background: rgba(255,255,255,0.2);
+      padding: 20px;
+      border-radius: 16px;
+      backdrop-filter: blur(10px);
+    }
+  </style>
 </head>
+
 <body>
-  <h2>Akıllı Hava Durumu</h2>
-  <p>Bu dosya mobil kullanım içindir.</p>
-</body>
-</html>
+
+  <h1>🌤️ Akıllı Hava Durumu</h1>
+
+  <input id="city" placeholder="Şehir gir">
+  <button onclick="getWeather()">Sorgula</button>
+
+  <div id="result" class="card"></div>
+
+  <script>
+    const API_KEY = "BURAYA_OPENWEATHER_API_KEY_GELECEK";
+
+    function getWe
