--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
   <div id="result" class="card"></div>
 
   <script>
-    const API_KEY = "BURAYA_OPENWEATHER_API_KEY_GELECEK";
+    const API_KEY = “0715c81369f683c65aaf7fc9407f2b3a";
 
     function getWe
